# discord-qr-auth

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.cargo/: config.toml
examples/authentication/: Cargo.toml
examples/authentication/src/: main.rs
src/: lib.rs  main.rs
src/core/: client.rs  errors.rs  mod.rs  user.rs  websocket.rs
src/modules/: websocket.rs
