[package]
name = "discord-qr-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "*", features = ["native-tls"] }
tokio = { version = "1.18.2", features = ["full"] }
futures-util = "0.3.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[patch.crates-io]
tungstenite = { git="https://github.com/n3oney/tungstenite-rs"}
